# hackathon1

./: .gitignore  AGENT_SKILLS_ARCHITECTURE.md  AUTH_CLEANUP_COMPLETE.md  BETTER_AUTH_COMPLETE.md  CHATWIDGET_FIX_SUMMARY.md  COMPLETE_STARTUP_GUIDE.md  FINAL_FIX_SUMMARY.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  HACKATHON_STATUS.md  IMPLEMENTATION_GUIDE.md  LANGUAGE_SWITCHER_IMPLEMENTATION.md  QUICK_START.md  README.md  START_DEV_SERVER.md  TEST_BACKEND.md  TRANSLATE_NAVBAR_LABELS.md  URDU_DOCS_STRUCTURE.md  URDU_TRANSLATION_GUIDE.md  VERCEL_CHATBOT_FIX.md  chat_auth_frontend.js  docusaurus.config.js  start-backend.sh  vercel.json
.gemini/: setting.json
backend/: .env.example  .env.save  EMBEDDING_SETUP.md  GEMINI_MIGRATION_GUIDE.md  README.md  STATUS.md  SYSTEM_PROMPT_UPDATE.md  api.py  auth_api.py  auth_api.py.save  chat_api.py  check_embeddings.py  database.py  embedding_service.py  main.py  main_fastapi.py  package-lock.json  package.json  populate_embeddings.py  pyproject.toml  qdrant_api.py  recreate_collection.py  requirements.txt  search.py  test_backend.sh  test_chat_endpoint.sh  test_personalization.sh  test_search.py
humanoid-robotics-book/: .env.example  .env.production  .gitignore  AUTH_MIGRATION_SUMMARY.md  AUTH_SETUP_GUIDE.md  AUTONOMOUS_INTEGRATION_SUMMARY.md  BETTER_AUTH_SETUP.md  CHANGES_SUMMARY.md  CHATBOT_SETUP.md  CHATWIDGET_SETUP.md  COMPLETE_FIX_GUIDE.md  DEBUG_BLANK_PAGE.md  DEBUG_URDU_BLANK.md  FIXES_APPLIED.md  FIX_BLANK_PAGE.md  INTEGRATION_COMPLETE.md  INTEGRATION_README.md  LANGUAGE_SWITCHING_FIX.md  LANGUAGE_SWITCHING_SOLUTION.md  README.md  (+21 more)
(+185 files in other folders)
