[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.16.1",
    "trafilatura>=2.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "openai>=1.54.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "cohere>=5.0.0",
    "email-validator>=2.3.0",
]
